<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateGames extends Migration{
	public function up(){ 
 		Schema::create('game', function (Blueprint $table) { 
			$table->bigIncrements('id');
			//LLAVE FORANEA DEL USUARIO
			$table->integer('user_id')->unsigned();
			$table->foreign('user_id')->references('id')->on('users')->onDelete('cascade');
			//CONTAR LOS PUNTOS
			$table->integer('score')->default(0);
		});
 	} 
	public function down(){
		Schema::dropIfExists('game');
	} 
}